<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">WearItNow</string>
    <string name="title_name">WEAR IT NOW</string>
    <!-- text label Activity -->
    <string name="member_label">Thẻ thành viên</string>
    <string name="member_game">Vòng xoay may mắn</string>
    <string name="coupon">Phiếu quà tặng</string>
    <string name="coupondetail">Thông tin phiếu quà tặng</string>
    <string name="newsdetail">Bản tin</string>
    <string name="couponhis">Lịch sử phiếu quà tặng</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="nearbySearch">Tìm kiếm gần</string>
    <string name="storelist">Cửa hàng</string>
    <string name="accountsetting">Thông tin tài khoản</string>
    <string name="purchase">Lịch sử mua hàng</string>
    <string name="notificationHis">Lịch sử tin nhắn</string>
    <string name="invitefb">Mời bạn bè</string>
    <!-- text label Activity -->
    
    <!-- <string name="faceIdpp">362498183889664</string> -->
    <string name="faceId">362498183889664</string>
    
    
    <string name="loading">Đang xử lý ...</string>
    <string name="language">Ngôn ngữ</string>
    <string name="all">Tất cả</string>
    <string name="getstarting">BẮT ĐẦU</string>
    
    
   
    <!-- text Activity NoInternet -->
    <string name="nointernet">Không có kết nối internet.Vui lòng kiểm tra lại</string>
    <string name="datanetwork">KHÔNG THỂ TRUY CẬP DỮ LIỆU MẠNG</string>
    <string name="checkyoutconnection">KIỂM TRA XEM BẠN ĐÃ KÍCH HOẠT KHẢ NĂNG TRUY CẬP MẠNG TRÊN THIẾT BỊ</string>
    <string name="setting">Cài đặt</string>
    <string name="exit">Thoát</string>
    <!-- text Activity NoInternet -->
   
    
	
	
    <string-array name="list_drawer_array">
        <item>DIVIDER</item>
        <item>ĐẾN TRANG CHỦ</item>
        <item>Trang chủ</item>
        <item>QUÀ TẶNG CHO BẠN</item>
        <item>Phiếu quà tặng</item>
        <item>Vòng xoay may mắn</item>
        <item>XEM CÁC THƯƠNG HIỆU CỦA CHÚNG TÔI TRÊN FACEBOOK</item>
        <item>John Henrry Vietnam</item>
        <item>Aino Sofia - Designed in Tokyo, Paris</item>
        <item>Farah Vintage Vietnam</item>
        <item>ĐỊA CHỈ CỬA HÀNG - TÌM NGAY</item>
        <item>Tìm kiếm gần</item>
        <item>Danh sách cửa hàng</item>
        <item>LỊCH SỬ</item>
        <item>Lịch sử mua hàng</item>
        <item>Tình trạng phiếu quà</item>
        <item>Thông báo</item>
        <item>CÀI ĐẶT</item>
        <item>Tài khoản</item>
        <item>Ngôn ngữ</item>
        <item>Mời dùng ứng dụng</item>
        <item>Dịch vụ khách hàng</item>
        <item>Đăng xuất</item>
    </string-array>

    <string name="title_activity_activity1">Activity1</string>
    <string name="title_activity_flash">TMG</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity2">Activity2</string>

    <!-- text Menu -->
    <string name="email">Email :</string>
    <string name="phone">Điện thoại :</string>
    <string name="emailHintLogin">Đăng nhập email</string>
    <string name="phoneHintLogin">Số điện thoại</string>
    <string name="signin">ĐĂNG NHẬP</string>
    <string name="createAcc">TẠO TÀI KHOẢN</string>
    <string name="signinnow">ĐĂNG NHẬP</string>
    <string name="registered_cus">DÀNH CHO KHÁCH HÀNG ĐÃ ĐĂNG KÝ</string>
    <string name="ifyoualready">Nếu bạn đã đăng ký thì đăng nhập ở đây</string>
    <string name="notregistered_cus">CHƯA ĐĂNG KÝ? KHÔNG VẤN ĐỀ</string>
    <string name="ifyoudonalready">Nếu bạn là người dùng mới.Vui lòng bấm "Đăng Ký"</string>
    <string name="enteryouremail">Nhập email của bạn</string>
    <string name="enteryourphone">Nhập số điện thoại của bạn</string>
    <string name="signinwithface">ĐĂNG NHẬP BẰNG FACEBOOK</string>
    <string name="ifyoudontwantreg">Nếu không muốn đăng ký. Bấm "Đăng nhập bằng Facebook"</string>
    <string name="register">ĐĂNG KÝ NGAY</string>
    <!-- text Menu -->


    <!-- text Register -->
    <string name="titleActionBarReg">Đăng ký</string>
    <string name="nameReg">Tên đăng nhập</string>
    <string name="requirenameReg">Tên đăng nhập*</string>
    <string name="emailReg">Địa chỉ email</string>
    <string name="requireemailReg">Địa chỉ email*</string>
    <string name="phoneReg">Số điện thoại </string>
    <string name="requirephoneReg">Số điện thoại*</string>
    <string name="confirmphoneReg">Xác nhận số điện thoại </string>
    <string name="requireconfirmphoneReg">Xác nhận số điện thoại*</string>
    <string name="genderReg">Giới tính :</string>
    <string name="gender">Giới tính</string>
    <string name="requirebirthday">Ngày sinh*</string>
    <string name="requiregender">Giới tính*</string>
    <string name="birdReg">Ngày Sinh :</string>
    <string name="yeardtexthint">Năm sinh</string>
    <string name="submitReg">Đăng ký</string>

    <string-array name="gender">
        <item>Giới tính</item>
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string-array name="month">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item> <item>6</item>
        <item>7</item> <item>8</item><item>9</item><item>10</item><item>11</item><item>12</item>
    </string-array>
    <string-array name="day">
        <item>1</item><item>2</item> <item>3</item><item>4</item><item>5</item><item>6</item><item>7</item>
        <item>8</item><item>9</item><item>10</item><item>11</item><item>12</item><item>13</item><item>14</item>
        <item>15</item><item>16</item><item>17</item><item>18</item> <item>19</item><item>20</item><item>21</item>
        <item>22</item><item>23</item> <item>24</item><item>25</item><item>26</item><item>27</item> <item>28</item>
        <item>29</item> <item>30</item> <item>31</item>
    </string-array>
    <!-- text Register -->
    <!-- text list first item drawer -->
    <string name="viewmembercard">Xem thẻ thành viên</string>
    <string name="home">Trang chủ</string>
    
    <!-- text call dialog -->
    <string name="callhenry">1</string>
    <string name="callainosofia">2</string>
    <string name="callfara">3</string>
    <string name="CallConfirmation">XÁC NHẬN CUỘC GỌI</string>
    <string name="CallConfirmationDesc">Bạn có muốn gọi số %@ không ?</string>
    <string name="CallConfirmationYes">Có</string>
    <string name="CallConfirmationCancel">Huỷ</string>
    <!-- text call dialog -->
    <!-- text list item drawer -->


    <!-- text membercard -->
    <string name="member">TÊN : </string>
    <string name="cardNo">SỐ THẺ : </string>
    <!-- text membercard -->
    
    <!-- text coupon -->
    <string name="value">Giá trị: </string>
    <string name="expire">Ngày hết hạn: </string>
    <!-- text coupon -->


    <!-- text Purchase -->
    <string name="receiptno">Số biên lai: </string>
    <string name="Price">Giá : </string>
    <!-- text Purchase -->
    
    <!-- text purchaseDetail -->
    <string name="detail">CHI TIẾT</string>
    <string name="storename">Tên cửa Hàng :</string>
    <string name="descripstion">Mô tả:</string>
    <string name="attr">Thuộc tính:</string>
    <string name="pro_description">MÔ TẢ SẢN PHẨM</string>
    <string name="size">Kích thước :</string>
    <string name="quantity">Số lượng :</string>
    <string name="day">Ngày mua :</string>
    <!-- text purchaseDetail -->
    <string-array name="CP_His">
        <item>Còn hạn</item>
        <item>Đã dùng</item>
        <item>Hết hạn</item>
    </string-array>
    
    <!-- text dialog setting language-->
    <string name="settingLanguage">CÀI ĐẶT NGÔN NGỮ</string>
    <string name="english">Tiếng Anh</string>
    <string name="vietnamese">Tiếng Việt</string>
    <!-- text dialog setting language-->
    
    <!-- text dialog detail Notification -->
    <string name="detailsms">Chi tiết tin nhắn</string>
    <string name="cancel">Hủy bỏ</string>
    <!-- text dialog detail Notification -->
    
    <!-- text login when null-->
	<string name="emailRequired">Bạn cần phải nhập email</string>
	<string name="emailInvalid">Email không hợp lệ</string>
	<string name="phoneRequired">Bạn cần phải nhập số điện thoại</string>
	<!-- text login when null-->
	
	<!-- text register when null-->
	<string name="nameRequired">Bạn cần phải nhập tên</string>
	<string name="phoneInvalid">Số điện thoại không hợp lệ</string>
	<string name="phoneNotMatch">Số điện thoại không khớp</string>
	<string name="genderRequired">Bạn cần phải nhập giới tính</string>
	<string name="birthdayRequired">Bạn cần phải nhập ngày sinh</string>
	<string name="birthdayInvalid">Ngày sinh không hợp lệ</string>
	<!-- text register when null-->
	
	<!-- text help -->
	<string name="helpCoupon">Hãy đến cửa hàng gần nhất và sử dụng phiếu quà tặng để mua hàng!
         Bạn sẽ được giảm giá theo giá trị của phiếu quà tặng.</string>
    <string name="helpGame">Nếu bạn muốn tăng số lượt chơi!
         Vui lòng đến cửa hàng chúng tôi và sử dụng phiếu quà tặng.</string>
    <string name="helpInvite">Bạn sẽ nhận được phiếu quà tặng nếu bạn của bạn cài ứng dụng và đăng ký thành viên. Mời ngay!</string>
    <string name="limitInvite">Bạn chỉ có thể mời tối đa 50 người</string>
    <!-- text help -->
    
    <!-- text acc -->
	<string name="birthdayAcc">SINH NHẬT : </string>
	<string name="genderAcc">GIỚI TÍNH : </string>
	<string name="phoneAcc">ĐIỆN THOẠI :</string>
	<!-- text acc -->
	<string name="outCredits">Bạn đã hết lượt chơi. Vui lòng sử dụng phiếu quà tặng để nạp lại lượt chơi.</string>
	<string name="emailUsed">Email này đã được sử dụng</string>
	<string name="emailorphoneincorrect">Email hoặc số điện thoại không đúng</string>
	
	<string name="noShop">Chưa có cửa hiệu !</string>
	<string name="khongcocuahang">Không có cửa hàng</string>
</resources>