<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="0.5"
        android:text="@string/detail"
        android:textSize="@dimen/font_size_PC_detail"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/storename"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_storename"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/receiptno"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_receiptno"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="UCP :"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_ucp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/descripstion"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_des"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/attr"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_attr"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="0.5"
        android:text="@string/pro_description"
        android:textSize="@dimen/font_size_PC_detail"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/size"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/quantity"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/Price"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/day"
            android:textSize="@dimen/font_size_PC_detail_large" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="CH Bien hoa"
            android:textSize="@dimen/font_size_PC_detail_large" />
    </LinearLayout>

</LinearLayout>