<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/img_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_code"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tv_nameMemberAbove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_barcode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:text="ThaiTam"
        android:textSize="@dimen/font_size_member_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_code"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" 
        android:layout_above="@+id/tv_member_name"
        android:text="1234567"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"
        />
      <TextView
        android:id="@+id/tv_member_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" 
        android:layout_above="@+id/tv_cardNo"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/member"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"
        />
        <TextView
        android:id="@+id/tv_cardNo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" 
        android:layout_above="@+id/btn_start"
        android:text="@string/cardNo"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <Button
        android:id="@+id/btn_start"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="GoHomePage"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/getstarting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:id="@+id/layout_video_info_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="invisible" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/light" />

        <TextView
            android:id="@+id/tv_brightness_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>